splitting up AppComponent into a few components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,153 +1,12 @@
 <mat-toolbar color="primary">Форма резюме</mat-toolbar>
 
 <mat-stepper linear #stepper (selectionChange)="onStepChange($event)">
-  <mat-step [stepControl]="aboutForm">
-    <form [formGroup]="aboutForm" class="form">
-      <ng-template matStepLabel>About</ng-template>
-      <mat-form-field appearance="outline">
-        <mat-label>Ім'я</mat-label>
-        <input matInput formControlName="firstName" />
-        <ng-container *ngIf="aboutForm.controls['firstName'] as firstName">
-          <mat-error
-            *ngIf="firstName.touched && firstName.hasError('required')"
-          >
-            Ім'я обов'язкове
-          </mat-error>
-        </ng-container>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Прізвище</mat-label>
-        <input matInput formControlName="lastName" />
-        <ng-container *ngIf="aboutForm.controls['lastName'] as lastName">
-          <mat-error *ngIf="lastName.touched && lastName.hasError('required')">
-            Прізвище обов'язкове
-          </mat-error>
-        </ng-container>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Дата народження</mat-label>
-        <mat-select formControlName="dateOfBirth">
-          <mat-option *ngFor="let year of years" [value]="year">
-            {{ year }}
-          </mat-option>
-        </mat-select>
-        <!-- <input matInput type="number" formControlName="dateOfBirth" /> -->
-        <ng-container *ngIf="aboutForm.controls['dateOfBirth'] as dateOfBirth">
-          <mat-error
-            *ngIf="dateOfBirth.touched && dateOfBirth.hasError('required')"
-          >
-            Дата народження обов'язкова
-          </mat-error>
-        </ng-container>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput formControlName="email" />
-        <ng-container *ngIf="aboutForm.controls['email'] as email">
-          <mat-error *ngIf="email.touched && email.hasError('required')">
-            Email обов'язковий
-          </mat-error>
-          <mat-error *ngIf="email.touched && email.hasError('email')">
-            Не правильний формат Email
-          </mat-error>
-        </ng-container>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Телефон</mat-label>
-        <input matInput type="number" formControlName="phone" />
-        <ng-container *ngIf="aboutForm.controls['phone'] as phone">
-          <mat-error *ngIf="phone.touched && phone.hasError('required')">
-            Телефон обов'язковий
-          </mat-error>
-        </ng-container>
-      </mat-form-field>
-
-      <button
-        mat-raised-button
-        color="primary"
-        [disabled]="!aboutForm.valid"
-        matStepperNext
-        (click)="aboutStep()"
-      >
-        Далі
-      </button>
-    </form>
+  <mat-step [stepControl]="aboutForm" label="Fill out info about you">
+    <app-about></app-about>
   </mat-step>
 
   <mat-step [stepControl]="educationForm" label="Fill out your education">
-    <mat-checkbox class="checkbox" [formControl]="checkboxControl"
-      >Маю вищу освіту</mat-checkbox
-    >
-
-    <form [formGroup]="educationForm" class="form">
-      <ng-container formArrayName="educationBlocks">
-        <ng-container
-          *ngFor="let block of educationBlocks.controls; let i = index"
-        >
-          <div class="block" [formGroup]="getEducationBlock(i)">
-            <mat-form-field appearance="outline">
-              <mat-label>Заклад освіти</mat-label>
-              <input matInput formControlName="placeEd" />
-              <ng-container
-                *ngIf="educationBlocks.at(i).get('placeEd') as placeEd"
-              >
-                <mat-error
-                  *ngIf="placeEd.touched && placeEd.hasError('required')"
-                >
-                  Інпут обов'язковий
-                </mat-error>
-              </ng-container>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Роки навчання</mat-label>
-              <mat-select formControlName="yearsEd">
-                <mat-option *ngFor="let year of years" [value]="year">
-                  {{ year }}
-                </mat-option>
-              </mat-select>
-              <ng-container
-                *ngIf="educationBlocks.at(i).get('yearsEd') as yearsEd"
-              >
-                <mat-error
-                  *ngIf="yearsEd.touched && yearsEd.hasError('required')"
-                >
-                  Інпут обов'язковий
-                </mat-error>
-              </ng-container>
-            </mat-form-field>
-            <button
-              mat-raised-button
-              color="accent"
-              (click)="removeEducationBlock(i)"
-            >
-              Видалити
-            </button>
-          </div>
-        </ng-container>
-
-        <button mat-raised-button color="primary" (click)="addEducationBlock()">
-          Додати блок +
-        </button>
-      </ng-container>
-
-      <div class="btn-container">
-        <button mat-raised-button matStepperPrevious>Назад</button>
-
-        <button
-          mat-raised-button
-          color="primary"
-          [disabled]="!educationForm.valid"
-          matStepperNext
-          (click)="educationStep()"
-        >
-          Далі
-        </button>
-      </div>
-    </form>
+    <app-education></app-education>
   </mat-step>
 
   <ng-container
@@ -157,94 +16,7 @@
       [stepControl]="higherEducationForm"
       label="Fill out your higher Education"
     >
-      <form [formGroup]="higherEducationForm" class="form">
-        <ng-container formArrayName="higherEducationBlocks">
-          <ng-container
-            *ngFor="let block of higherEducationBlocks.controls; let i = index"
-          >
-            <div class="block" [formGroup]="getHigherEducationBlock(i)">
-              <mat-form-field appearance="outline">
-                <mat-label>Заклад освіти</mat-label>
-                <input matInput formControlName="institution" />
-                <ng-container
-                  *ngIf="
-                    higherEducationBlocks
-                      .at(i)
-                      .get('institution') as institution
-                  "
-                >
-                  <mat-error
-                    *ngIf="
-                      institution.touched && institution.hasError('required')
-                    "
-                  >
-                    Інпут обов'язковий
-                  </mat-error>
-                </ng-container>
-              </mat-form-field>
-              <mat-form-field appearance="outline">
-                <mat-label>Роки навчання</mat-label>
-                <mat-select formControlName="years">
-                  <mat-option *ngFor="let year of years" [value]="year">
-                    {{ year }}
-                  </mat-option>
-                </mat-select>
-                <ng-container
-                  *ngIf="higherEducationBlocks.at(i).get('years') as years"
-                >
-                  <mat-error
-                    *ngIf="years.touched && years.hasError('required')"
-                  >
-                    Інпут обов'язковий
-                  </mat-error>
-                </ng-container>
-              </mat-form-field>
-              <mat-form-field appearance="outline">
-                <mat-label>Ступінь</mat-label>
-                <input matInput formControlName="degree" />
-                <ng-container
-                  *ngIf="higherEducationBlocks.at(i).get('degree') as degree"
-                >
-                  <mat-error
-                    *ngIf="degree.touched && degree.hasError('required')"
-                  >
-                    Інпут обов'язковий
-                  </mat-error>
-                </ng-container>
-              </mat-form-field>
-              <button
-                mat-raised-button
-                color="accent"
-                (click)="removeHigherEducationBlock(i)"
-              >
-                Видалити
-              </button>
-            </div>
-          </ng-container>
-
-          <button
-            mat-raised-button
-            color="primary"
-            (click)="addHigherEducationBlock()"
-          >
-            Додати блок
-          </button>
-        </ng-container>
-
-        <div class="btn-container">
-          <button mat-raised-button matStepperPrevious>Назад</button>
-
-          <button
-            mat-raised-button
-            color="primary"
-            [disabled]="!educationForm.valid"
-            matStepperNext
-            (click)="higherEducationStep()"
-          >
-            Далі
-          </button>
-        </div>
-      </form>
+      <app-higher-education></app-higher-education>
     </mat-step>
   </ng-container>
 
@@ -252,125 +24,10 @@
     [stepControl]="workExperienceForm"
     label="Fill out your work Experience"
   >
-    <form [formGroup]="workExperienceForm" class="form">
-      <ng-container formArrayName="workExperienceBlocks">
-        <ng-container
-          *ngFor="let block of workExperienceBlocks.controls; let i = index"
-        >
-          <div class="block" [formGroup]="getworkExperienceBlock(i)">
-            <mat-form-field appearance="outline">
-              <mat-label>Місце роботи</mat-label>
-              <input matInput formControlName="company" />
-              <ng-container
-                *ngIf="workExperienceBlocks.at(i).get('company') as company"
-              >
-                <mat-error
-                  *ngIf="company.touched && company.hasError('required')"
-                >
-                  Інпут обов'язковий
-                </mat-error>
-              </ng-container>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Посада</mat-label>
-              <input matInput formControlName="position" />
-              <ng-container
-                *ngIf="workExperienceBlocks.at(i).get('position') as position"
-              >
-                <mat-error
-                  *ngIf="position.touched && position.hasError('required')"
-                >
-                  Інпут обов'язковий
-                </mat-error>
-              </ng-container>
-            </mat-form-field>
-            <mat-form-field appearance="outline">
-              <mat-label>Роки роботи</mat-label>
-              <mat-select formControlName="years">
-                <mat-option *ngFor="let year of years" [value]="year">
-                  {{ year }}
-                </mat-option>
-              </mat-select>
-              <ng-container
-                *ngIf="workExperienceBlocks.at(i).get('years') as years"
-              >
-                <mat-error *ngIf="years.touched && years.hasError('required')">
-                  Інпут обов'язковий
-                </mat-error>
-              </ng-container>
-            </mat-form-field>
-            <button
-              mat-raised-button
-              color="accent"
-              (click)="removeWorkExperienceBlock(i)"
-            >
-              Видалити
-            </button>
-          </div>
-        </ng-container>
-      </ng-container>
-
-      <button
-        mat-raised-button
-        color="primary"
-        (click)="addWorkExperienceBlock()"
-      >
-        Додати блок
-      </button>
-
-      <div class="btn-container">
-        <button mat-raised-button matStepperPrevious>Назад</button>
-
-        <button
-          mat-raised-button
-          color="primary"
-          [disabled]="!workExperienceForm.valid"
-          matStepperNext
-          (click)="workExperienceStep()"
-        >
-          Далі
-        </button>
-      </div>
-    </form>
+    <app-work-experience></app-work-experience>
   </mat-step>
 
   <mat-step [stepControl]="result" label="Result">
-    <div>
-      <h2>Резюме</h2>
-      <hr />
-      <div>
-        <h3>Про мене:</h3>
-        <p>Ім'я: {{ about?.firstName }}</p>
-        <p>Прізвище: {{ about?.lastName }}</p>
-        <p>Email: {{ about?.email }}</p>
-        <p>Телефон: {{ about?.phone }}</p>
-      </div>
-      <hr />
-      <div>
-        <h3>Освіта:</h3>
-        <div *ngFor="let edu of education?.educationBlocks">
-          <p>Заклад: {{ edu.placeEd }}</p>
-          <p>Роки: {{ edu.yearsEd }}</p>
-        </div>
-      </div>
-      <hr />
-      <div>
-        <h3>Вища освіта:</h3>
-        <div *ngFor="let edu of higherEducation?.higherEducationBlocks">
-          <p>Заклад: {{ edu.institution }}</p>
-          <p>Роки: {{ edu.years }}</p>
-          <p>Ступінь: {{ edu.degree }}</p>
-        </div>
-      </div>
-      <hr />
-      <div>
-        <h3>Досвід роботи:</h3>
-        <div *ngFor="let work of workExperience?.workExperienceBlocks">
-          <p>Місце роботи: {{ work.company }}</p>
-          <p>Посада: {{ work.position }}</p>
-          <p>Роки: {{ work.years }}</p>
-        </div>
-      </div>
-    </div>
+    <app-result></app-result>
   </mat-step>
 </mat-stepper>
